analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/valueClassInSuperType.java
public final class TargetClass /* pack.TargetClass*/ extends pack.ValueClass {
  public  TargetClass();//  .ctor()
}
